2001-08-30  Joseph S. Myers  <jsm28@cam.ac.uk>

	* snake/snake/snake.c (main): Control -d by #ifdef DEBUG; adjust
	usage message accordingly.  Bug reported by Malcolm Parsons
	<malcolm@ivywell.screaming.net>.

	* mille/save.c (save): Handle '\r' the same as '\n'.  Bug reported
	by Nicolas Lichtmaier <nick@technisys.com.ar>.

	* snake/snake/snake.c (post): Always lseek back to the beginning
	of the file.  Patch from Malcolm Parsons
	<malcolm@ivywell.screaming.net>.

	* wump/wump.c (gcd): New function.
	(cave_init): Ensure that gcd of (delta + 1) and room_num is 1.
	Based on bug report and patch by <afghan@afghanhound.org.uk>.

	* worm/worm.c: Keep track of visible worm length.
	(newpos): If nowhere is available for the new prize, have the
	player win rather than hanging.  Bug reported by Malcolm Parsons
	<malcolm@ivywell.screaming.net>.

	* phantasia/Makefrag: Use a stamp file for generating score files.
	* phantasia/.cvsignore: Update.

2001-08-29  Joseph S. Myers  <jsm28@cam.ac.uk>

	* worm/worm.c (main): Check for too small a screen size.
	(newpos): Fix off-by-one error preventing the prize from being
	placed on the top line.
	(process): Position score appropriately for different width
	screens.

	* worm/worm.c: Whitespace tweak.

	* worm/worm.c, worm/worm.6: Remove documented bug with long worm
	lengths, and improve handling of non-standard screen sizes.  From
	OpenBSD.

	* wargames/wargames: Allow - in game names.  Bug reported by Guus
	Sliepen <guus@sliepen.warande.net>.

	* wtf/acronyms: Add AIUI.  Suggestion from Adam Olsen
	<adamolsen@technologist.com>.

	* phantasia/Makefrag: Fix typo.

	* arithmetic/arithmetic.6, atc/atc.6.in, atc/list.c,
	backgammon/backgammon/backgammon.6,
	backgammon/teachgammon/teach.c, battlestar/battlestar.6,
	battlestar/com2.c, battlestar/parse.c, bcd/bcd.6,
	boggle/boggle/boggle.6, canfield/canfield/canfield.6.in,
	cribbage/cribbage.6.in, factor/factor.6, fish/fish.6,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes2,